There should only be one build.cake per repository

--- a/src/Test/Gitty.Test.csproj
+++ b/src/Test/Gitty.Test.csproj
@@ -15,7 +15,7 @@
     <None Remove="build.cake" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="build.cake" />
+    <EmbeddedResource Include="..\..\build.cake" Link="build.cake" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Aspenlaub.Net.GitHub.CSharp.Pegh" Version="1.0.6961.33473" />
