Cannot use library in cake scripts -> make it .net standard

--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Aspenlaub.Net.GitHub.CSharp.Gitty</AssemblyName>
     <RootNamespace>Aspenlaub.Net.GitHub.CSharp.Gitty</RootNamespace>
     <GenerateBuildInfoConfigFile>false</GenerateBuildInfoConfigFile>
