--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -19,9 +19,9 @@
     <None Remove="Test\**" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Aspenlaub.Net.GitHub.CSharp.LibGit2Sharp" Version="1.0.6996.34165" />
     <PackageReference Include="Aspenlaub.Net.GitHub.CSharp.Pegh" Version="1.0.6982.33881" />
     <PackageReference Include="Autofac" Version="4.9.1" />
-    <PackageReference Include="Cake.Git" Version="0.19.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
