Log everything the process runner is doing

--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="LibGit2Sharp" Version="0.25.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
   <ItemGroup>
