--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -32,6 +32,14 @@
     <None Remove="Test\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="packageicon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="packageicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Aspenlaub.Net.GitHub.CSharp.Pegh" Version="2.0.94.880" />
     <PackageReference Include="Aspenlaub.Net.GitHub.CSharp.PeghStandard" Version="2.0.94.887" />
     <PackageReference Include="Autofac" Version="4.9.4" />
