Package ID added to project file, build.cake updated

--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -15,6 +15,7 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/aspenlaub/Gitty.git</RepositoryUrl>
     <RepositoryBranch>master</RepositoryBranch>
+    <PackageId>Gitty</PackageId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
