--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -41,13 +41,12 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Aspenlaub.Net.GitHub.CSharp.Pegh" Version="2.0.94.880" />
-    <PackageReference Include="Aspenlaub.Net.GitHub.CSharp.PeghStandard" Version="2.0.94.887" />
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="LibGit2Sharp" Version="0.25.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="PeghStandard" Version="2.0.145.1008" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
