--- a/src/Test/Gitty.Test.csproj
+++ b/src/Test/Gitty.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <AssemblyName>Aspenlaub.Net.GitHub.CSharp.Gitty.Test</AssemblyName>
     <RootNamespace>Aspenlaub.Net.GitHub.CSharp.Gitty.Test</RootNamespace>
@@ -24,14 +24,14 @@
     <EmbeddedResource Include="success.cake" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Pegh" Version="2.0.399.583" />
+    <PackageReference Include="Pegh" Version="2.0.479.847" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gitty.csproj" />
