--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -34,16 +34,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="packageicon.ico" />
+    <None Remove="packageicon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packageicon.ico">
+    <Content Include="packageicon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.25.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="PeghStandard" Version="2.0.573.1076" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="PeghStandard" Version="2.0.610.1058" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
