.Net 5 port seems to work, copy sources from GittyNet to here

--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Aspenlaub.Net.GitHub.CSharp.Gitty</AssemblyName>
     <RootNamespace>Aspenlaub.Net.GitHub.CSharp.Gitty</RootNamespace>
     <GenerateBuildInfoConfigFile>false</GenerateBuildInfoConfigFile>
@@ -9,31 +9,24 @@
     <Deterministic>false</Deterministic>
     <AssemblyTitle>Aspenlaub.Net.GitHub.CSharp.Gitty</AssemblyTitle>
     <AssemblyProduct>Aspenlaub.Net.GitHub.CSharp.Gitty</AssemblyProduct>
-    <VersionDays>$([System.DateTime]::UtcNow.Subtract($([System.DateTime]::Parse("2019-07-24"))).Days.ToString())</VersionDays>
-    <VersionMinutes>$([System.Math]::Floor($([System.DateTime]::UtcNow.Subtract($([System.DateTime]::UtcNow.Date)).TotalMinutes)).ToString())</VersionMinutes>
-    <Version>2.0.$(VersionDays).$(VersionMinutes)</Version>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/aspenlaub/Gitty.git</RepositoryUrl>
     <RepositoryBranch>master</RepositoryBranch>
     <PackageId>Gitty</PackageId>
+    <VersionDays>$([System.DateTime]::UtcNow.Subtract($([System.DateTime]::Parse("2019-07-24"))).Days.ToString())</VersionDays>
+    <VersionMinutes>$([System.Math]::Floor($([System.DateTime]::UtcNow.Subtract($([System.DateTime]::UtcNow.Date)).TotalMinutes)).ToString())</VersionMinutes>
+    <Version>2.0.$(VersionDays).$(VersionMinutes)</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <NuspecFile>Gitty.nuspec</NuspecFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="CakeGit\**" />
-    <Compile Remove="Cake\**" />
     <Compile Remove="Test\**" />
-    <EmbeddedResource Remove="CakeGit\**" />
-    <EmbeddedResource Remove="Cake\**" />
     <EmbeddedResource Remove="Test\**" />
-    <None Remove="CakeGit\**" />
-    <None Remove="Cake\**" />
     <None Remove="Test\**" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="packageicon.ico" />
     <None Remove="packageicon.png" />
   </ItemGroup>
   <ItemGroup>
@@ -42,9 +35,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LibGit2Sharp" Version="0.25.2" />
+    <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="PeghStandard" Version="2.0.610.1058" />
+    <PackageReference Include="PeghCore" Version="2.0.610.1058" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -58,5 +51,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
   </ItemGroup>
 </Project>
