--- a/src/Gitty.csproj
+++ b/src/Gitty.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="PeghCore" Version="2.0.610.1058" />
+    <PackageReference Include="Pegh" Version="2.0.637.895" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
